# qwen_asr_burn

./: .gitignore  CLAUDE.md  Cargo.toml  DESIGN.md  ISSUES.md  README.md  test_30s.aligned.srt  test_30s_segments.json  test_30s_transcript.txt
.claude/skills/burn/: SKILL.md
.claude/skills/burn-workspace/: grade.py
.claude/skills/burn-workspace/iteration-1/: benchmark.json  benchmark.md
.claude/skills/burn-workspace/iteration-1/eval-1-cnn-scaffold/: eval_metadata.json
.claude/skills/burn-workspace/iteration-1/eval-1-cnn-scaffold/with_skill/: grading.json  timing.json
.claude/skills/burn-workspace/iteration-1/eval-1-cnn-scaffold/with_skill/outputs/: Cargo.toml  approach.md  main.rs  model.rs
.claude/skills/burn-workspace/iteration-1/eval-1-cnn-scaffold/without_skill/: grading.json  timing.json
.claude/skills/burn-workspace/iteration-1/eval-1-cnn-scaffold/without_skill/outputs/: approach.md  main.rs  model.rs
.claude/skills/burn-workspace/iteration-1/eval-2-migrate-api/: eval_metadata.json
.claude/skills/burn-workspace/iteration-1/eval-2-migrate-api/with_skill/: grading.json  timing.json
.claude/skills/burn-workspace/iteration-1/eval-2-migrate-api/with_skill/outputs/: migration_guide.md  model_fixed.rs
.claude/skills/burn-workspace/iteration-1/eval-2-migrate-api/without_skill/: grading.json  timing.json
.claude/skills/burn-workspace/iteration-1/eval-2-migrate-api/without_skill/outputs/: migration_guide.md  model_fixed.rs
.claude/skills/burn-workspace/iteration-1/eval-3-wasm-backend/: eval_metadata.json
.claude/skills/burn-workspace/iteration-1/eval-3-wasm-backend/with_skill/: grading.json  timing.json
.claude/skills/burn-workspace/iteration-1/eval-3-wasm-backend/with_skill/outputs/: wasm_inference.rs  wasm_setup.md
.claude/skills/burn-workspace/iteration-1/eval-3-wasm-backend/without_skill/: grading.json  timing.json
.claude/skills/burn-workspace/iteration-1/eval-3-wasm-backend/without_skill/outputs/: wasm_inference.rs  wasm_setup.md
.claude/skills/burn/evals/: evals.json
.claude/skills/burn/references/: backends.md  burn-toml.md  datasets.md  deployment.md  migration-0.21.md  modules.md  performance.md  saving-loading.md  tensors.md  training.md
.claude/skills/pipeline-srt/: SKILL.md
.claude/skills/transformers-to-burn/: SKILL.md
.claude/skills/transformers-to-burn/evals/: evals.json
.claude/skills/transformers-to-burn/references/: burn-api-cheatsheet.md  component-mapping.md  generation-loop.md  weight-loading.md
src/: align_pipeline.rs  audio.rs  config.rs  main.rs  model.rs  pipeline.rs  srt.rs  text_processor.rs  tokenizer.rs  transcribe_pipeline.rs  translate_pipeline.rs  vad.rs  video.rs
src/hy_mt/: chat.rs  config.rs  generate.rs  mod.rs  model.rs  server.rs
src/models/: mod.rs  qwen_asr.rs
src/models/hy_mt/: attention.rs  config.rs  decoder.rs  mlp.rs  mod.rs  model.rs  norm.rs  rope.rs
src/models/qwen_asr/: attention.rs  config.rs  decoder.rs  encoder.rs  mlp.rs  mod.rs  model.rs  norm.rs  rope.rs
src/utils/: audio.rs  mod.rs  srt.rs  text_processor.rs  tokenizer.rs
test_30s_srt_work/: assemble_source_srt.py  phrases.json  phrases_for_translation.txt  segment_000.align.json
tools/: validate_asr.py
