[package]
name = "qwen-asr-burn"
version = "0.1.0"
edition = "2021"
default-run = "qwen-asr-burn"

[dependencies]
burn = { version = "0.21", features = ["fusion", "std"], default-features = false }
burn-store = "0.21"
clap = { version = "4", features = ["derive"] }
tokenizers = { version = "0.22", default-features = false, features = ["onig"] }
hound = "3.5"
rustfft = "6.3"
rubato = "0.16"
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
log = "0.4"
env_logger = "0.11"
axum = { version = "0.8", optional = true }
tokio = { version = "1", features = ["full"], optional = true }
tracing = { version = "0.1", optional = true }
tracing-subscriber = { version = "0.3", optional = true }
rand = "0.10"
uuid = { version = "1", features = ["v4"], optional = true }
avio = "0.15"
eax = "0.5"
earshot = "1.1"

[features]
default = ["cuda"]
cuda = ["burn/cuda"]
metal = ["burn/wgpu"]
hy-mt = ["axum", "tokio", "tracing", "tracing-subscriber", "uuid"]
bf16 = []
