[package]
name = "qwen-asr-burn"
version = "0.1.0"
edition = "2021"
default-run = "qwen-asr-burn"

[dependencies]
burn = { git = "https://github.com/tracel-ai/burn.git", features = ["fusion", "std"], default-features = false }
burn-store = { git = "https://github.com/tracel-ai/burn.git" }
clap = { version = "4", features = ["derive"] }
tokenizers = { version = "0.22", default-features = false, features = ["onig"] }
hound = "3.5"
rustfft = "6.3"
rubato = "0.16"
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
log = "0.4"
env_logger = "0.11"
rand = "0.10"
avio = "0.15"
eax = "0.5"
earshot = "1.1"

[features]
default = ["cuda"]
cuda = ["burn/cuda"]
metal = ["burn/metal"]
bf16 = []

[patch.crates-io]
burn = { git = "https://github.com/tracel-ai/burn.git" }
burn-autodiff = { git = "https://github.com/tracel-ai/burn.git" }
burn-backend = { git = "https://github.com/tracel-ai/burn.git" }
burn-core = { git = "https://github.com/tracel-ai/burn.git" }
burn-cpu = { git = "https://github.com/tracel-ai/burn.git" }
burn-cubecl = { git = "https://github.com/tracel-ai/burn.git" }
burn-cubecl-fusion = { git = "https://github.com/tracel-ai/burn.git" }
burn-cuda = { git = "https://github.com/tracel-ai/burn.git" }
burn-derive = { git = "https://github.com/tracel-ai/burn.git" }
burn-dispatch = { git = "https://github.com/tracel-ai/burn.git" }
burn-flex = { git = "https://github.com/tracel-ai/burn.git" }
burn-fusion = { git = "https://github.com/tracel-ai/burn.git" }
burn-ir = { git = "https://github.com/tracel-ai/burn.git" }
burn-ndarray = { git = "https://github.com/tracel-ai/burn.git" }
burn-nn = { git = "https://github.com/tracel-ai/burn.git" }
burn-optim = { git = "https://github.com/tracel-ai/burn.git" }
burn-rocm = { git = "https://github.com/tracel-ai/burn.git" }
burn-router = { git = "https://github.com/tracel-ai/burn.git" }
burn-std = { git = "https://github.com/tracel-ai/burn.git" }
burn-store = { git = "https://github.com/tracel-ai/burn.git" }
burn-tch = { git = "https://github.com/tracel-ai/burn.git" }
burn-tensor = { git = "https://github.com/tracel-ai/burn.git" }
burn-vision = { git = "https://github.com/tracel-ai/burn.git" }
burn-wgpu = { git = "https://github.com/tracel-ai/burn.git" }
